@@ -6,14 +6,13 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.Arrays;
 import java.util.List;
 
 @RestController
 @RequestMapping("api/v1/student")
 public class StudentController {
 
-    private static final List<Student> STUDENTS = Arrays.asList(
+    private static final List<Student> STUDENTS = List.of(
             new Student(1, "James Bond"),
             new Student(2, "Maria Jones"),
             new Student(3, "Anna Smith")
